==> makerbase-mks/MKS-DLP/firmware/mksDLP_Project/Middlewares/arduino/stm32/cores/arduino/HardwareTimer.cpp <==
#include <HardwareTimer.h>
#include <Arduino.h> // for noInterrupts(), interrupts()

void HardwareTimer::resume(void) {
  #if 0		//skyblue modidy 2016-11-29  

    TIM_Cmd(this->dev, ENABLE);
#endif //skyblue modidy 2016-11-29    
    
}

void HardwareTimer::setMode(int channel, timer_mode mode) {
#if 0		//skyblue modidy 2016-11-29    
    TIM_OCInitStructure.TIM_OCMode =  mode;
    if (channel == 1)
    {
        TIM_OC1Init(this->dev, &TIM_OCInitStructure); 
    }else if (channel == 2)
    {
        TIM_OC2Init(this->dev, &TIM_OCInitStructure); 
    }else if (channel == 3)
    {
        TIM_OC3Init(this->dev, &TIM_OCInitStructure); 
    }else if (channel == 4)
    {
        TIM_OC4Init(this->dev, &TIM_OCInitStructure); 
    }
#endif //skyblue modidy 2016-11-29    
}

uint16_t HardwareTimer::getCompare(int channel) {
    // return timer_get_compare(this->dev, (uint8)channel);
    if (channel == 1)
    {
        return this->dev->CCR1; 
    }else if (channel == 2)
    {
        return this->dev->CCR2; 
    }else if (channel == 3)
    {
        return this->dev->CCR3; 
    }else if (channel == 4)
    {
        return this->dev->CCR4; 
    }
    return -1;
}

void HardwareTimer::refresh(void) {
#if 0		//skyblue modidy 2016-11-29    
  
    // timer_generate_update(this->dev);
    this->dev->EGR = TIM_PSCReloadMode_Immediate; 
#endif //skyblue modidy 2016-11-29    
    
}
