==> tony-cloud/STM32_duino/libraries/HardwareTimer/src/HardwareTimer.cpp <==
#include "HardwareTimer.h"
#include CHIP_PERIPHERAL_INCLUDE

void HardwareTimer::resume(int channel, TIMER_MODES mode) {
    bool hasInterrupt = false;
    for(size_t i=0; i<sizeof(callbacks) / sizeof(callbacks[0]); i++) {
        if (callbacks[i] != NULL) {
            hasInterrupt = true;
            break;
        }
    }

#ifdef TIM1 
    if (handle.Instance == TIM1) {
        __HAL_RCC_TIM1_CLK_ENABLE();
        interruptTimers[0] = this;
        if (hasInterrupt) {
#if (STM32F410Cx || STM32F410Rx || STM32F410Tx)  /*F4 TIM1_UP_TIM10_IRQn. but F410 exception*/
            HAL_NVIC_SetPriority(TIM1_UP_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_IRQn);	
#elif defined(STM32F3)||defined(STM32L4)|| STM32F100xB|| STM32F100xE /*F100 TIM1_UP_TIM16*/
            HAL_NVIC_SetPriority(TIM1_UP_TIM16_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_TIM16_IRQn);
#elif defined(STM32F1)||defined(STM32F2)||defined(STM32F4)|| defined(STM32F7)||defined(STM32H7)
            HAL_NVIC_SetPriority(TIM1_UP_TIM10_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_TIM10_IRQn);
#endif
            HAL_NVIC_SetPriority(TIM1_CC_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_CC_IRQn);
        }

        TIM_ClockConfigTypeDef sClockSourceConfig;
        sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
        HAL_TIM_ConfigClockSource(&handle, &sClockSourceConfig);

        TIM_MasterConfigTypeDef sMasterConfig;
        sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
        sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
        HAL_TIMEx_MasterConfigSynchronization(&handle, &sMasterConfig);

        handle.Init.RepetitionCounter = 0;
    }
#endif

#ifdef TIM2
    if (handle.Instance == TIM2) {
        __HAL_RCC_TIM2_CLK_ENABLE();
		
#ifndef TIM3		
        pwm_callback_func = []() { handleInterrupt(interruptTimers[1]); };
#endif		
        interruptTimers[1] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM2_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM2_IRQn);
        }
    }
#endif

#ifdef TIM3
    if (handle.Instance == TIM3) {
        __HAL_RCC_TIM3_CLK_ENABLE();
        pwm_callback_func = []() { handleInterrupt(interruptTimers[2]); };
        interruptTimers[2] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM3_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM3_IRQn);
        }
    }
#endif

#ifdef TIM4
    if (handle.Instance == TIM4) {
        __HAL_RCC_TIM4_CLK_ENABLE();
        interruptTimers[3] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM4_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM4_IRQn);
        }
    }
#endif

//add by huaweiwx@sina.com 2018.5.28
#ifdef TIM5
    if (handle.Instance == TIM5) {
        __HAL_RCC_TIM5_CLK_ENABLE();
        interruptTimers[4] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM5_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM5_IRQn);
        }
    }
#endif

#ifdef TIM8
    if (handle.Instance == TIM8) {
        __HAL_RCC_TIM8_CLK_ENABLE();
        interruptTimers[7] = this;
        if (hasInterrupt) {
#if defined(STM32F2)||defined(STM32F4)||defined(STM32F7)||defined(STM32H7)
            HAL_NVIC_SetPriority(TIM8_UP_TIM13_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM8_UP_TIM13_IRQn);	
#else
            HAL_NVIC_SetPriority(TIM8_UP_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM8_UP_IRQn);
#endif
            HAL_NVIC_SetPriority(TIM8_CC_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM8_CC_IRQn);
        }

        TIM_ClockConfigTypeDef sClockSourceConfig;
        sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
        HAL_TIM_ConfigClockSource(&handle, &sClockSourceConfig);

        TIM_MasterConfigTypeDef sMasterConfig;
        sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
        sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
        HAL_TIMEx_MasterConfigSynchronization(&handle, &sMasterConfig);

        handle.Init.RepetitionCounter = 0;
    }
#endif
#ifdef TIM9
    if (handle.Instance == TIM9) {
        __HAL_RCC_TIM9_CLK_ENABLE();
        interruptTimers[8] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM1_BRK_TIM9_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_BRK_TIM9_IRQn);
        }
    }
#endif
#ifdef TIM10
    if (handle.Instance == TIM10) {
        __HAL_RCC_TIM10_CLK_ENABLE();
        interruptTimers[9] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM1_UP_TIM10_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_TIM10_IRQn);
        }
    }
#endif
#ifdef TIM11
    if (handle.Instance == TIM11) {
        __HAL_RCC_TIM11_CLK_ENABLE();
        interruptTimers[10] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM1_TRG_COM_TIM11_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_TRG_COM_TIM11_IRQn);
        }
    }
#elif defined(TIM21)
    if (handle.Instance == TIM21) {
        __HAL_RCC_TIM21_CLK_ENABLE();
        interruptTimers[10] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM21_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM21_IRQn);
        }
    }
#endif
#ifdef TIM12
    if (handle.Instance == TIM12) {
        __HAL_RCC_TIM12_CLK_ENABLE();
        interruptTimers[11] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM8_BRK_TIM12_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM8_BRK_TIM12_IRQn);
        }
    }
#elif defined(TIM22)
    if (handle.Instance == TIM22) {
        __HAL_RCC_TIM22_CLK_ENABLE();
        interruptTimers[11] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM22_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM22_IRQn);
        }
    }
#endif
#ifdef TIM13
    if (handle.Instance == TIM13) {
        __HAL_RCC_TIM13_CLK_ENABLE();
        interruptTimers[12] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM8_UP_TIM13_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM8_UP_TIM13_IRQn);
        }
    }
#endif
#ifdef TIM15
    if (handle.Instance == TIM15) {
        __HAL_RCC_TIM15_CLK_ENABLE();
        interruptTimers[14] = this;		
        if (hasInterrupt) {
  #if defined(STM32H7)
            HAL_NVIC_SetPriority(TIM15_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM15_IRQn);  
  #else  
            HAL_NVIC_SetPriority(TIM1_BRK_TIM15_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_BRK_TIM15_IRQn);
  #endif			
        }
    }
#endif
#ifdef TIM16
    if (handle.Instance == TIM16) {
        __HAL_RCC_TIM16_CLK_ENABLE();
        interruptTimers[15] = this;
        if (hasInterrupt) {
  #if defined(STM32H7)
            HAL_NVIC_SetPriority(TIM16_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM16_IRQn);  
  #else  
            HAL_NVIC_SetPriority(TIM1_UP_TIM16_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_TIM16_IRQn);
  #endif
        }
    }
#endif
#ifdef TIM17
    if (handle.Instance == TIM17) {
        __HAL_RCC_TIM17_CLK_ENABLE();
        interruptTimers[16] = this;
        if (hasInterrupt) {
  #if defined(STM32H7)
            HAL_NVIC_SetPriority(TIM17_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM17_IRQn);  
  #else  
            HAL_NVIC_SetPriority(TIM1_TRG_COM_TIM17_IRQn, TIM_PRIORITY, 0);
            HAL_NVIC_EnableIRQ(TIM1_TRG_COM_TIM17_IRQn);
  #endif
        }
    }
#endif
//add

    handle.Init.CounterMode = TIM_COUNTERMODE_UP;
    handle.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;

#if !defined(STM32L1) && !defined(STM32L0)  /*huaweiwx*/
    handle.Init.RepetitionCounter = 0;
#endif
    HAL_TIM_Base_Init(&handle);

    if (callbacks[0] != NULL) {
        HAL_TIM_Base_Start_IT(&handle);
    } else {

        HAL_TIM_Base_Start(&handle);
    }
	
    if ( channel &&(mode == TIMER_PWM)){
		resumePwm(channel);
	} else {
		resumeChannel(1);
		resumeChannel(2);
		resumeChannel(3);
		resumeChannel(4);
#if defined(TIM_CHANNEL_6) // Some chip(F3/7 L4 H7) there are 6 channels.  huaweiwx 2018.5.28
		resumeChannel(5);
		resumeChannel(6);
#endif
	}
}

void HardwareTimer::setMode(int channel, TIMER_MODES mode, uint8_t pin) {
    int pinMode = PIN_NOT_USED;
    int pull = GPIO_NOPULL;

    switch(mode) {
        case TIMER_PWM:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM1;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_TIMING;
            break;

        case TIMER_OUTPUT_COMPARE_ACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_INACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_TOGGLE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_TOGGLE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_PWM1:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM1;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_PWM2:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM2;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_FORCED_ACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_FORCED_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_FORCED_INACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_FORCED_INACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_INPUT_CAPTURE_RISING:
            channelIC[channel - 1].ICPolarity = TIM_INPUTCHANNELPOLARITY_RISING;
            pinMode = GPIO_MODE_AF_PP;
            pull = GPIO_PULLDOWN;
            break;

        case TIMER_INPUT_CAPTURE_FALLING:
            channelIC[channel - 1].ICPolarity = TIM_INPUTCHANNELPOLARITY_FALLING;
            pinMode = GPIO_MODE_AF_PP;
            pull = GPIO_PULLDOWN;
            break;
		default:
		    break;
    }

    if (pinMode != PIN_NOT_USED) {
        for(int i=0; i<tim_pin_list_size; i++) {
            if (isSameChannel(channel, tim_pin_list[i].signalType)) {

                if (pin == TIMER_DEFAULT_PIN ||
                        (variant_pin_list[pin].port == tim_pin_list[i].port && variant_pin_list[pin].pinMask == tim_pin_list[i].pinMask)) {

                    stm32GpioClockEnable(tim_pin_list[i].port);

                    GPIO_InitTypeDef GPIO_InitStruct;
                    GPIO_InitStruct.Pin = tim_pin_list[i].pinMask;
                    GPIO_InitStruct.Mode = pinMode;
                    GPIO_InitStruct.Pull = pull;
                    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;

                    #ifdef STM32F1
                        tim_pin_list[i].alternate();
                    #else
                        GPIO_InitStruct.Alternate = tim_pin_list[i].alternate;
                    #endif

                    HAL_GPIO_Init(tim_pin_list[i].port, &GPIO_InitStruct);

                    return;
                }
            }
        }
    }
}

uint32_t HardwareTimer::getCompare(int channel) {
    if (channel == 1) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_1);
    if (channel == 2) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_2);
    if (channel == 3) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_3);
    if (channel == 4) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_4);
#if defined(TIM_CHANNEL_6) // Some chip(F3/7 L4 H7) there are 6 channels.  huaweiwx 2018.5.28
    if (channel == 5) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_5);
    if (channel == 6) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_6);
#endif

    return 0;
}

void HardwareTimer::refresh() {
    HAL_TIM_GenerateEvent(&handle, TIM_EVENTSOURCE_UPDATE);
}
